# anyrpc

./: .gitignore  CMakeLists.txt  anyrpc.doxyfile  license  log4cplus.properties  logger_doc.md  msvc_build_doc.md  readme.md  version  version.h.in
cmake/: FindLog4cplus.cmake  FindMsgpack.cmake
example/: CMakeLists.txt  exampleClient.cpp  exampleJson.cpp  exampleMessagePack.cpp  exampleServer.cpp  exampleXml.cpp
include/anyrpc/: anyrpc.h  api.h  client.h  connection.h  document.h  error.h  handler.h  logger.h  method.h  reader.h  server.h  socket.h  stream.h  value.h
include/anyrpc/internal/: base64.h  http.h  mingw.condition_variable.h  mingw.mutex.h  mingw.thread.h  strtod.h  time.h  unicode.h
include/anyrpc/json/: jsonclient.h  jsonreader.h  jsonserver.h  jsonwriter.h
include/anyrpc/messagepack/: messagepackclient.h  messagepackformat.h  messagepackreader.h  messagepackserver.h  messagepackwriter.h
include/anyrpc/xml/: xmlclient.h  xmlreader.h  xmlserver.h  xmlwriter.h
src/: CMakeLists.txt  client.cpp  connection.cpp  document.cpp  handler.cpp  logger.cpp  method.cpp  reader.cpp  server.cpp  socket.cpp  stream.cpp  value.cpp
src/internal/: base64.cpp  http.cpp  time.cpp  unicode.cpp
src/json/: jsonclient.cpp  jsonreader.cpp  jsonserver.cpp  jsonwriter.cpp
src/messagepack/: messagepackclient.cpp  messagepackreader.cpp  messagepackserver.cpp  messagepackwriter.cpp
src/xml/: xmlclient.cpp  xmlreader.cpp  xmlserver.cpp  xmlwriter.cpp
test/: CMakeLists.txt  testHttpHeader.cpp  testJson.cpp  testMain.cpp  testMessagePack.cpp  testMethodMap.cpp  testServer.cpp  testStream.cpp  testValue.cpp  testXml.cpp
